--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,23 +1,42 @@
 <idea-plugin>
-  <id>color.scheme.Dark Inspire</id>
-  <name>Dark Inspire Color Scheme</name>
-  <version>1.0.0</version>
-  <vendor email="aykononov@yandex.ru" url="https://github.com/aykononov/intellij-dark-inspire-theme">Aleksandr Kononov</vendor>
+    <id>color.scheme.dark-inspire</id>
+    <name>Dark Inspire Color Scheme</name>
+    <version>1.0.4</version>
+    <vendor email="aykononov@yandex.ru" url="https://github.com/aykononov/intellij-dark-inspire-theme">Aleksandr Kononov
+    </vendor>
 
-  <description><![CDATA[
+    <description><![CDATA[
       This is a Dark theme for JetBrains IDE, inspired by the default theme "Dark Inspire"
+
+      <br/><br/>
+        To install:
+        <ul>
+        <li>Go to <i>Settings (Preferences) | Plugins</i>, find the theme plugin, and install it</li>
+        <li>Restart the IDE</li>
+        <li>Go to <i>Settings (Preferences) | Appearance & Behavior | Appearance</i> and select "Dark Inspire" in the <i>Theme</i> dropdown</li>
+        </ul>
+        <br/>
+
+        <a href="https://github.com/aykononov/intellij-dark-inspire-theme">GitHub: source code and issues</a>
+        <br/><br/><br/>
+        <img src="https://raw.githubusercontent.com/aykononov/intellij-dark-inspire-theme/master/images/editorJava.png" border="0" width="500" alt="Java screenshot">
+        <br/>
+        <img src="https://raw.githubusercontent.com/aykononov/intellij-dark-inspire-theme/master/images/editorXml.png" border="0" width="506" alt="XML screenshot">
+        <br/>
+        <img src="https://raw.githubusercontent.com/aykononov/intellij-dark-inspire-theme/master/images/editorJson.png" border="0" width="506" alt="JSON screenshot">
+        <br/>
     ]]></description>
 
-  <change-notes><![CDATA[
+    <change-notes><![CDATA[
       
     ]]>
-  </change-notes>
+    </change-notes>
 
-  <idea-version since-build="142.0"/>
+    <idea-version since-build="142.0"/>
 
-  <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.lang</depends>
 
-  <extensions defaultExtensionNs="com.intellij">
-    <bundledColorScheme path="/colors/Dark Inspire"/>
-  </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+        <bundledColorScheme path="/colors/Dark Inspire"/>
+    </extensions>
 </idea-plugin>
